Add section images, adjust font weights and font family, and adjust dummy text
This commit will add the detail sections of the three main divisions. Another change is the addition of another font, Lora.
Lastly, the dummy text are adjusted to real text.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Amanda Rowe - Portal</title>
     <link rel="stylesheet" href="resources/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&family=Noto+Serif+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="hero">
@@ -19,6 +20,36 @@
         <div class="hero__subsection business">
             Business
         </div>
+    </section>
+    <section class="detail detail__beauty">
+        <h3>Beauty is power.</h3>
+        <p>
+            "Everything has beauty, but not everyone sees it." - Check Amanda's beauty products and let the beauty in you glow!
+        </p>
+        <button>
+            More Details
+        </button>
+    </section>
+    <section class="detail detail__music">
+        <p>
+            New EP out now!
+        </p>
+        <h3>"Got to Find My Way"</h3>
+        <p>
+            "Instead of crumbling with the pain, I've got nothing to gain, I've got to Find My way" - Steam Amanda's latest single now! 
+        </p>
+        <button>
+            More details
+        </button>
+    </section>
+    <section class="detail detail__business">
+        <h3>Let's Talk Business</h3>
+        <p>
+            BPOSeats.com is a solutions provider for businesses of all sizes. It offers the most functional and reliable offices, seat leasing options, and custom solutions for the incredibly rising need of businesses opting to scale and grow in the Philippines.
+        </p>
+        <button>
+            Get Started
+        </button>
     </section>
 </body>
 </html>
