Adjust hover states of hero sections, button styles
This commit will add hover states to the three hero images. This change will also
adjust css properties of the button to correspond with the designs.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 <body>
     <section class="hero">
         <div class="hero__subsection beauty">
-            Beauty
+            <h3>
+                Beauty
+            </h3>
+            <img class="bg-image" src="/resources/images/hero-1.png" alt="Hero Image 1">
         </div>
-        <div class="hero__subsection music">
-            Music
+        <div class="hero__subsection beauty">
+            <h3>
+                Music
+            </h3>
+            <img class="bg-image" src="/resources/images/hero-2.png" alt="Hero Image 2">
         </div>
-        <div class="hero__subsection business">
-            Business
+        <div class="hero__subsection beauty">
+            <h3>
+                Business
+            </h3>
+            <img class="bg-image" src="/resources/images/hero-3.png" alt="Hero Image 3">
         </div>
     </section>
     <section class="detail detail__beauty">
@@ -34,6 +43,7 @@
         <p>
             New EP out now!
         </p>
+        <img src="resources/images/got-to-find-my-way-album-art.png" alt="Got To Find My Way Album Art">
         <h3>"Got to Find My Way"</h3>
         <p>
             "Instead of crumbling with the pain, I've got nothing to gain, I've got to Find My way" - Steam Amanda's latest single now! 
