Add breakpoints for smaller screens
This commit will add support for smaller screens and make adjustments to make the page responsive.

--- a/index.html
+++ b/index.html
@@ -15,51 +15,55 @@
             <h3>
                 Beauty
             </h3>
-            <img class="bg-image" src="/resources/images/hero-1.png" alt="Hero Image 1">
+            <img class="bg-image" src="/resources/images/hero-1-expanded.png" alt="Hero Image 1">
         </div>
         <div class="hero__subsection beauty">
             <h3>
                 Music
             </h3>
-            <img class="bg-image" src="/resources/images/hero-2.png" alt="Hero Image 2">
+            <img class="bg-image" src="/resources/images/hero-2-expanded.png" alt="Hero Image 2">
         </div>
         <div class="hero__subsection beauty">
             <h3>
                 Business
             </h3>
-            <img class="bg-image" src="/resources/images/hero-3.png" alt="Hero Image 3">
+            <img class="bg-image" src="/resources/images/hero-3-expanded.png" alt="Hero Image 3">
         </div>
     </section>
-    <section class="detail detail__beauty">
-        <h3>Beauty is power.</h3>
-        <p>
-            "Everything has beauty, but not everyone sees it." - Check Amanda's beauty products and let the beauty in you glow!
-        </p>
-        <button>
-            More Details
-        </button>
-    </section>
-    <section class="detail detail__music">
-        <p>
-            New EP out now!
-        </p>
-        <img src="resources/images/got-to-find-my-way-album-art.png" alt="Got To Find My Way Album Art">
-        <h3>"Got to Find My Way"</h3>
-        <p>
-            "Instead of crumbling with the pain, I've got nothing to gain, I've got to Find My way" - Steam Amanda's latest single now! 
-        </p>
-        <button>
-            More details
-        </button>
-    </section>
-    <section class="detail detail__business">
-        <h3>Let's Talk Business</h3>
-        <p>
-            BPOSeats.com is a solutions provider for businesses of all sizes. It offers the most functional and reliable offices, seat leasing options, and custom solutions for the incredibly rising need of businesses opting to scale and grow in the Philippines.
-        </p>
-        <button>
-            Get Started
-        </button>
+    <section class="details-container">
+        <section class="detail detail__beauty">
+            <h3>Beauty is power.</h3>
+            <p>
+                "Everything has beauty, but not everyone sees it." - Check Amanda's beauty products and let the beauty in you glow!
+            </p>
+            <button>
+                More Details
+            </button>
+        </section>
+        <section class="detail detail__music">
+            <div class="detail__music-info">
+                <p>
+                    New EP out now!
+                </p>
+                <h3>"Got to Find My Way"</h3>
+                <p>
+                    "Instead of crumbling with the pain, I've got nothing to gain, I've got to Find My way" - Steam Amanda's latest single now! 
+                </p>
+                <button>
+                    More details
+                </button>
+            </div>
+            <img src="resources/images/got-to-find-my-way-album-art.png" alt="Got To Find My Way Album Art">
+        </section>
+        <section class="detail detail__business">
+            <h3>Let's Talk Business</h3>
+            <p>
+                BPOSeats.com is a solutions provider for businesses of all sizes. It offers the most functional and reliable offices, seat leasing options, and custom solutions for the incredibly rising need of businesses opting to scale and grow in the Philippines.
+            </p>
+            <button>
+                Get Started
+            </button>
+        </section>
     </section>
 </body>
 </html>
