--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
     <link rel="stylesheet" href="resources/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&family=Noto+Serif+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.1.96/css/materialdesignicons.min.css" integrity="sha512-NaaXI5f4rdmlThv3ZAVS44U9yNWJaUYWzPhvlg5SC7nMRvQYV9suauRK3gVbxh7qjE33ApTPD+hkOW78VSHyeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <nav>
+        <img src="resources/images/logo-white.png" alt="">
+        <i class="mdi mdi-menu" id="menu" onclick="toggleMenu()"></i>
+    </nav>
+    <ul
+        class="menu-overlay"
+        id="menu-overlay"
+    >
+        <li>
+            <a href="">
+                Beauty
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Music
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Business
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Events
+            </a>
+        </li>
+        <li>
+            <a href="">
+                About
+            </a>
+        </li>
+    </ul>
     <section class="hero">
         <div
             class="hero__subsection beauty-hero"
